# spectrum_operator

./: .gitattributes  .gitignore  Dockerfile  README.md  baselines.json  blog.md  claude_code_frontend_prompt.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  scenarios.py
agents/: operator_policies.py  regulator.py
assets/: auction_reward_curve.png.PLACEHOLDER  per_component_breakdown.png.PLACEHOLDER  regulator_log.png.PLACEHOLDER  visualization_hero.png.PLACEHOLDER
blog/: blog_post.md
docs/: HF.md  colab.md  multi_agent_design.md
rf_spectrum_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: baselines.py  evaluate.py
server/: app.py  spectrum_environment.py
server/static/: visualize.html
tests/: test_integration.py  test_new_scenarios.py  test_operator_policies.py  test_regulator.py  test_rewards.py
training/: _apply_fixes.py  _build_notebook.py  grpo_dispute_coalition.ipynb  grpo_multiagent.ipynb  grpo_multiagent_fixed.ipynb
video/: script.md
